# sparse

./: .gitignore  Cargo.toml  LICENSE  README.md  sample_config.lua
src/: base_config.lua  config.rs  devices.rs  log.rs  logout.rs  main.rs  search.rs  timeline.rs  tui.rs  tui_app.rs  verification.rs  verification_common.rs  verification_initiate.rs  verification_wait.rs
src/tui_app/: config.rs  mod.rs
src/tui_app/tui/: actions.rs  messages.rs  mod.rs  rooms.rs
