[package]
name = "sparse"
version = "0.1.0"
authors = ["ftilde <ftilde@tamepointer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]

tokio = { version = "1.6.0", features = ["full", "rt-multi-thread"] }
url = "2.2.0"
chrono = "0.4"
dirs = "*"
tracing-subscriber = "0.2.8"
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
rpassword = "5.0"
unsegen = "0.3"
unsegen_signals = "0.3"
termion = "1.0"
nix = "0.17"
backtrace = "0.3"
structopt = "0.3"
hostname = "0.3"
notify-rust = "4.5"
tempfile = "3.2"
rlua = "0.17"
linkify = "0.7"
sequence_trie = "0.3.4"
mime_guess = "2.0"

[dependencies.matrix-sdk]
#git = "https://github.com/matrix-org/matrix-rust-sdk"
#rev = "ee40d917d1f20230de3ad368df7fda17cda66deb"
git = "https://github.com/ftilde/matrix-rust-sdk"
branch = "sparse"
#path = "../matrix-rust-sdk/crates/matrix-sdk"
#default-features = false
#features = ["encryption", "sled_cryptostore", "require_auth_for_profile_requests", "native-tls", "sled_state_store"]

# We use these until a new unsegen version is released
[patch.crates-io]
unsegen = { git = 'https://github.com/ftilde/unsegen' }
