[package]
name = "sparse"
version = "0.1.0"
authors = ["ftilde <ftilde@tamepointer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 1


[dependencies]
tokio = { version = "1.6.0", features = ["full", "rt-multi-thread"] }
chrono = "0.4"
dirs = "*"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
rpassword = "5.0"
unsegen = "0.3"
unsegen_signals = "0.3"
termion = "1.0"
nix = "0.17"
backtrace = "0.3"
structopt = "0.3"
hostname = "0.3"
notify-rust = "4.5"
tempfile = "3.2"
rlua = "0.17"
linkify = "0.7"
sequence_trie = "0.3.4"
mime_guess = "2.0"
cli-clipboard = "0.2"
regex = "1.6"
diff = "0.1"
shellexpand = "2.1"

uuid = "0.8.2" #Consider removing once reactions in matrix-sdk are fixed.

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "5ab69f74004a2a8ed4fdd0669d8e8547c95d3377"
#git = "https://github.com/ftilde/matrix-rust-sdk"
#branch = "sparse"
#path = "../matrix-rust-sdk/crates/matrix-sdk"
#default-features = false
#features = ["encryption", "sled_cryptostore", "require_auth_for_profile_requests", "native-tls", "sled_state_store"]

# We use these until a new unsegen version is released
[patch.crates-io]
unsegen = { git = 'https://github.com/ftilde/unsegen' }
#unsegen = { path = '../unsegen' }
